# sgc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
.github/workflows/: cmake.yml
benchmark/: main.cpp
extras/ci/: build.ps1  vcenv.ps1
extras/vs/: sgc.natvis
include/: sgc.h
include/sgc/: allocator.h  deque.h  forward_list.h  gc_ptr.h  list.h  map.h  set.h  system.h  units.h  unordered_map.h  unordered_set.h  vector.h
include/sgc/details/: bitset.h  link_chain.h  spin_mutex.h
include/sgc/gc/: executor.h  metrics.h  model.h  object_cache.h  ref_cache.h  service.h  utils.h
src/: system_linux.cpp  system_win32.cpp
src/gc/: executor.cpp  object_cache.cpp  ref_cache.cpp  service.cpp
test/: demo.cpp  memory_model.cpp  object_cache.cpp  ref_cache.cpp  test_tools.cpp  test_tools.h
